# gpu-limbdark

./: CMakeLists.txt  pyproject.toml  setup.py
.github/action/: Dockerfile  entrypoint.sh
lib/: cpu_ops.cc  gpu_ops.cc  kepler.h  kernel_helpers.h  kernels.cc.cu  kernels.h  pybind11_kernel_helpers.h
src/jax_limbdark/: __init__.py  kepler_jax.py
tests/: test_kepler_jax.py
